# simple_jsonpath

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  simple_jsonpath.pyi  tox.ini
.github/workflows/: CI.yml
python/simple_jsonpath/: __init__.py  _simple_jsonpath.pyi  jsonpath.py
src/: lib.rs
