[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "simple_jsonpath"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [
    { name = "Jeremy Spencer", email = "seojumper@gmail.com" },
]
description = "A simple - yet quick - JSONPath implementation for querying JSON data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"] 
keywords = ["jsonpath"]

dynamic = ["version"]

dependencies = [
    "orjson>=3.11.7",
    "typing_extensions>=4.0.0,<5.0.0"
]

[tool.maturin]
python-source = "python"
module-name = "simple_jsonpath._simple_jsonpath"

[project.urls]
Homepage = "https://github.com/seojumper/simple_jsonpath"